
[package]
name = "coinlive"
description = "Interactive command line tool that displays live cryptocurrency prices and simple historical price charts."
version = "0.2.3"
authors = ["Markus Mayer <mmayer@mayeranalytics.com>"]
readme = "README.md"
homepage = "https://github.com/mayeranalytics/coinlive"
repository = "https://github.com/mayeranalytics/coinlive"
documentation = "https://github.com/mayeranalytics/coinlive"
keywords = ["cryptocurrency", "crypto", "charts"]
categories = ["command-line-utilities"]
license = "GPL-3.0-or-later"
edition = "2018"

[[bin]]
name = "coinlive"

[profile.release]
debug = 0
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
url = "2"
futures = "0.3.*"